# stargazer

./: .envrc  .gitignore  Dockerfile  README.md  devenv.nix  devenv.yaml  pyproject.toml
.github/workflows/: test.yaml
stargazer/: cacher.py  fetcher.py  main.py
test/integration/: test_app.py
test/unit/: test_cacher.py  test_fetcher.py
