[project]
name = "stargazer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.0",
    "flask>=3.1.0",
    "flask-restx>=1.3.0",
    "requests>=2.32.3",
    "asyncio>=3.4.3",
    "aiohttp>=3.11.14",
]

[project.scripts]
api = "stargazer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
